# mimi-chat

./: DEVELOPER.md  DEV_TOOLS.md  PYWEBVIEW_FRONTEND.md  README.md  pyproject.toml
src/: ast_edit.py  ignore.py  logo.py  main.py  mcp_client.py  storage.py  terminal.py  tools.py
src/frontend/: help.html  index.html  markdown.css  redteam.html  theme.css
src/frontend/assets/: README.txt  google-fonts-api-response.css
src/frontend/assets/dm-sans/: LICENSE.txt  SOURCE.txt  dm-sans.css
src/frontend/assets/dompurify/: SOURCE.txt
src/frontend/assets/highlight/: SOURCE.txt  hljs-theme.css
src/frontend/assets/jetbrains-mono/: SOURCE.txt  jetbrains-mono.css
src/frontend/assets/marked/: SOURCE.txt
src/prompts/: __init__.py  brainstorm_partner.md  coding_agent.md  designer.md  financial_advisor.md  legal_assistant.md  medical_assistant.md  therapist.md  tutor.md  writing_editor.md
